# foxsy-tournament-manager

./: .gitignore  docker-compose.yml  readme.md
runner/: .gitignore  Dockerfile  Pipfile  README.md  default.yml  docker-compose.yml  entrypoint.sh  pyproject.toml  readme.md  requirements.txt
runner/app/: data_dir.py  fast_api_app.py  main.py  rabit_mq_app.py  test_rmq.py  test_runner.py
runner/app/game_runner/: game.py  manager.py  runner_manager.py
runner/app/storage/: downloader.py  minio_client.py  storage_client.py
runner/app/utils/: args_helper.py  base_teams.py  config.py  logging_config.py  message_sender.py  messages.py  tools.py
runner/composes/: .env.example  readme.md
runner/composes/minio/: docker-compose.yml
runner/composes/rabbit/: docker-compose.yml
runner/composes/rabbit-minio-runner/: docker-compose.yml
runner/composes/rabbit-minio-runner-tm/: docker-compose.yml
runner/composes/runner/: docker-compose.yml
runner/composes/tournament-manager/: docker-compose.yml
tournament_manager/: entrypoint.sh  main.py  pyproject.toml  readme.md  requirements.txt  tables  test.py
tournament_manager/app/: fast_api_app.py
tournament_manager/app/managers/: database_manager.py  runner_manager.py  scheduler.py  team_manager.py  tournament_manager.py
tournament_manager/app/models/: game_model.py  message_convertor.py  runner_log_model.py  runner_model.py  team_model.py
tournament_manager/app/tests/: conftest.py  (+1 more)
tournament_manager/manager/: tournament_manager.py
tournament_manager/model/: game.py  game_result.py  team.py  tournament.py
(+93 files in other folders)
