[project]
name = "runner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aio-pika>=9.4.3",
    "colorlog>=6.8.2",
    "fastapi>=0.115.0",
    "minio>=7.2.9",
    "pika>=1.3.2",
    "psutil>=6.0.0",
    "requests>=2.32.3",
    "unicorn>=2.1.0",
    "uvicorn>=0.30.6",
]
