[project]
name = "tournament-manager"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aio-pika>=9.4.3",
    "aiobotocore>=2.15.1",
    "aiosqlite>=0.20.0",
    "colorlog>=6.8.2",
    "fastapi>=0.115.0",
    "minio>=7.2.8",
    "pika>=1.3.2",
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "sqlalchemy>=2.0.35",
    "unicorn>=2.1.0",
    "uvicorn>=0.30.6",
]
